# euroc_ml

./: .gitignore  README  bootstrap_mmlf.sh  moegliche_tests.txt  requirements.txt
deepmind/: run_cpu  run_ros
deepmind/dqn/: Scale.lua  convnet.lua  plot_wow2.lua  ros.lua  train_agent.lua
gazebo_publisher/: CMakeLists.txt  package.xml
gazebo_publisher/src/: Collision_detector.py  SuturoMlCollision_detector.py  (+2 more)
logs/: README.txt  mongo_export  mongo_import
luarosbind/: CMakeLists.txt  luaavg.cpp  package.xml
luarosbind/src/: dperoslib.cpp  roswrap.cpp
memoryviz/: visualize_log.html
mmlf/: CMakeLists.txt  package.xml
mmlf/mmlf.egg-info/: SOURCES.txt
mmlf/mmlf/worlds/gazo_scan_table/actions/: __init__.py  action_base.py  actions.py
mmlf/mmlf/worlds/gazo_scan_table/environments/: gazebo_scan_table_environment.py  gazebo_table_viewer.py
mmlf/mmlf/worlds/scantablesim_world/: __init__.py
mmlf/mmlf/worlds/scantablesim_world/actions/: __init__.py  action_base.py
mmlf/mmlf/worlds/scantablesim_world/environments/: __init__.py  scantablesim_environment.py  scantablesim_viewer.py
mmlf/srv/: TransformerService.srv
notes/: state_thoughts.txt
scantablesim/: learning.py  qlearning_exec.py  qlearningenvtask.py  sts.py  sts_gui.py  sts_main.py
semrec/: config.cfg
suturo_head_learner/: CMakeLists.txt  package.xml  setup.py
suturo_learning/: CMakeLists.txt  package.xml  prolog_queries.txt
suturo_learning/launch/: json_prolog.launch
suturo_learning/log_visualization/: last_template.html  template.html
suturo_learning/owl/: suturo_learning.owl
suturo_learning/prolog/: init.pl  load_owls.pl  suturo_learning.pl  suturo_owls.pl  suturo_tests.pl
suturo_learning/scripts/: visualize_logs.py
suturo_learning/tests/: tests.json
suturo_ml_headmover/: CMakeLists.txt  package.xml  suturo-ml-headmover.asd  suturo-ml-headmover.asd~
(+395 files in other folders)
